--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = [
 ]
 
 dependencies = [
+    "torch>=2.0.0",
     "tqdm>=4.66.0",
     "httpx>=0.28.1",
     "undetected-chromedriver>=3.5.5",
